<resources>

    <string name="app_name">搜工程</string>
    
	<string name="search_project">搜工程</string>
	
	<string name="my_project">我的工程</string>
	
	<string name="my_circle">圈子</string>
	
	<string name="my_account">账号</string>
	
	<string name="exit">退出</string>
	
	<string name="right_array">></string>
	
	<string name="store">我的收藏</string>
	
	<string name="suggest">每日推荐</string>
	
	<string name="latest_view">最近浏览</string>
	
	<string name="setting">设置</string>
	
	<string name="del_storage">删除缓存</string>
	
	<string name="about_us">关于我们</string>
	
	<string name="tab_suggest">推荐</string>
	
	<string name="tab_agent_compare">代理比选</string>
	
	<string name="tab_project_compare">项目比选</string>
	
	<string name="tab_invite_bids">招标</string>
	
	<string name="tab_win_bid">中标</string>
	
	<string name="regin_hint_nick_name">姓名</string>
	
	<string name="login_hint_account">账户</string>
	
    <string name="login_hint_password">密码</string>
    
    <string name="login_hint_init_password">初始密码</string>
    
    <string name="regin_hint_mobilenum">手机账号</string>
    
    <string name="regin_hint_certify_code">验证码</string>
    
    <string name="btn_login">登 录</string>
    
    <string name="btn_done">完成</string>
    
    <string name="text_regin">新用户</string>
    
    <string name="text_regin_problem">无法登录？</string>
    
    <string name="text_next_step">下一步</string>
    
	<string name="text_send">发布</string>
	
	<string name="text_comment">说点什么</string>
	
	<string name="text_attention_please">\t\t第三方系统收不到推送的消息
\n\n       
\t由于第三方 ROM 的管理软件需要用户手动操作
\n\n
\t小米【MIUI】
\n\n   
\t自启动管理：需要把应用加到【自启动管理】列表，否则杀进程或重新开机后进程无法开启
\n
\t通知栏设置：应用默认都是显示通知栏通知，如果关闭，则收到通知也不会提示
\n
\t网络助手：可以手动禁止已安装的第三方程序访问2G/3G和WIFI的网络和设置以后新安装程序是否允许访问2G/3G和WIFI的网络
\n\n   
华为【Emotion】
\n\n  
\t自启动管理：需要把应用加到【自启动管理】列表，否则杀进程或重新开机后进程不会开启，只能手动开启应用
\n
\t后台应用保护：需要手动把应用加到此列表，否则设备进入睡眠后会自动杀掉应用进程，只有手动开启应用才能恢复运行
\n
\t通知管理：应用状态有三种：提示、允许、禁止。禁止应用则通知栏不会有任何提醒
\n\n   
\t魅族【Flyme】
\n\n  
\t自启动管理：需要把应用加到【自启动管理】列表，否则杀进程或重新开机后进程无法开启
\n
\t通知栏推送：关闭应用通知则收到消息不会有任何展示
\n\n   
\tVIVO【Funtouch OS】
\n\n  
\t内存一键清理：需要将应用加入【白名单】列表，否则系统自带的“一键加速”，会杀掉进程
\n
\t自启动管理：需要将应用加入“i管家”中的【自启动管理】列表，否则重启手机后进程不会自启。但强制手动杀进程，即使加了这个列表中，后续进程也无法自启动。
\n\n   
\tOPPO【ColorOS】
\n\n  
\t冻结应用管理：需要将应用加入纯净后台，否则锁屏状态下无法及时收到消息
\n
\t自启动管理：将应用加入【自启动管理】列表的同时，还需要到设置-应用程序-正在运行里锁定应用进程，否则杀进程或者开机后进程不会开启，只能手动开启应用</string>
</resources>
