<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="MergeRootFrame" >
    <ImageView
        android:id="@+id/logo"
        android:background="@drawable/ic_launcher"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        />
	<com.sougongcheng.ui.widget.ClearableAutoCompleteTextView
	    android:layout_centerHorizontal="true"
	    style="@style/GlobleSingleLineEditText"
	    android:layout_below="@+id/logo"
        android:id="@+id/et_account"
        android:layout_marginTop="@dimen/margin_lg_right"
        android:layout_marginLeft="@dimen/margin_lg_right"
        android:layout_marginRight="@dimen/margin_lg_right"
        android:background="@drawable/bg_edittext"
        android:drawableLeft="@drawable/ic_person"
        android:drawableStart="@drawable/ic_person"
        android:textSize="@dimen/login_word_size"
        android:maxLength="11"
        android:hint="@string/login_hint_account"
        android:imeOptions="actionNext"
        android:nextFocusDown="@+id/et_password"
        />
	<com.sougongcheng.ui.widget.ClearableAutoCompleteTextView
	    android:layout_below="@+id/et_account"
	    android:layout_marginTop="@dimen/margin_top"
	    android:layout_marginLeft="@dimen/margin_lg_right"
        android:layout_marginRight="@dimen/margin_lg_right"
        android:background="@drawable/bg_edittext"
	    android:inputType="textPassword"
	    android:maxLength="20"
	    android:layout_centerHorizontal="true"
	    style="@style/GlobleSingleLineEditText"
        android:id="@+id/et_password"
        android:textSize="@dimen/login_word_size"
        android:drawableLeft="@drawable/ic_secure"
        android:drawableStart="@drawable/ic_secure"
        android:hint="@string/login_hint_password"
        android:nextFocusDown="@+id/submit"
        android:imeOptions="actionNext"
        />
	
	<Button
	    android:layout_below="@+id/et_password"
	    android:layout_marginTop="@dimen/margin_lg_right"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:id="@+id/submit"
	    android:text="@string/btn_login"
	    android:layout_marginLeft="@dimen/margin_lg_right"
        android:layout_marginRight="@dimen/margin_lg_right"
        android:textColor="@color/my_white"
        android:background="@drawable/submit_selector"
	    />
	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:id="@+id/tv_regin"
	    android:text="@string/text_regin"
	    android:layout_alignParentRight="true"
	    android:layout_alignParentBottom="true"
	    android:textColor="@color/my_blue"
	    android:layout_marginBottom="@dimen/margin_top"
	    android:textSize="20sp"
	    />
    </RelativeLayout>
