<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity"
    tools:ignore="MergeRootFrame" >
    <FrameLayout
        android:id="@+id/top_menu"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:layout_height="45dp"
        android:background="@color/tab_strip_back_groud"
        >
          <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="45dp"
             >
             <!-- 推荐 -->
             <RelativeLayout
              android:id="@+id/tab_suggest"
              android:layout_width="match_parent"
              android:layout_height="45dp"
              android:layout_weight="1">
             <TextView
                 android:id="@+id/tv_suggest"
                 android:layout_width="wrap_content"
				 android:layout_height="wrap_content" 
				 android:text="@string/tab_suggest" 
				 android:textSize="@dimen/text_lg_size" 
				 android:layout_centerInParent="true"
				 android:textColor="@color/tab_strip" 
                 />
             <TextView
                 android:id="@+id/line_suggest"
                 android:layout_width="match_parent"
                 android:layout_height="4dp"
                 android:background="@color/my_red"
                 android:layout_alignParentBottom="true"
                 />
            </RelativeLayout>
            <!-- 代理比选 -->
           <RelativeLayout
              android:id="@+id/tab_agent_compare"
              android:layout_width="match_parent"
              android:layout_height="45dp"
              android:layout_weight="1">
             <TextView
                 android:id="@+id/tv_agent_compare"
                 android:layout_width="wrap_content"
				 android:layout_height="wrap_content" 
				 android:text="@string/tab_agent_compare" 
				 android:textSize="@dimen/text_size" 
				 android:layout_centerInParent="true"
				 android:textColor="@color/my_gray" 
                 />
             <TextView
                 android:id="@+id/line_agent_compare"
                 android:layout_width="match_parent"
                 android:layout_height="4dp"
                 android:background="@color/my_red"
                 android:visibility="invisible"
                 android:layout_alignParentBottom="true"
                 />
            </RelativeLayout>
            <!-- 项目比选 -->
            <RelativeLayout
              android:id="@+id/tab_project_compare"
              android:layout_width="match_parent"
              android:layout_height="45dp"
              android:layout_weight="1">
             <TextView
                 android:id="@+id/tv_project_compare"
                 android:layout_width="wrap_content"
				 android:layout_height="wrap_content" 
				 android:text="@string/tab_project_compare" 
				 android:textSize="@dimen/text_size" 
				 android:layout_centerInParent="true"
				 android:textColor="@color/my_gray" 
                 />
             <TextView
                 android:id="@+id/line_project_compare"
                 android:layout_width="match_parent"
                 android:layout_height="4dp"
                 android:background="@color/my_red"
                 android:visibility="invisible"
                 android:layout_alignParentBottom="true"
                 />
            </RelativeLayout>
            <!-- 招标 -->
              <RelativeLayout
              android:id="@+id/tab_invite_bids"
              android:layout_width="match_parent"
              android:layout_height="45dp"
              android:layout_weight="1">
             <TextView
                 android:id="@+id/tv_invite_bids"
                 android:layout_width="wrap_content"
				 android:layout_height="wrap_content" 
				 android:text="@string/tab_invite_bids" 
				 android:textSize="@dimen/text_size" 
				 android:layout_centerInParent="true"
				 android:textColor="@color/my_gray" 
                 />
             <TextView
                 android:id="@+id/line_invite_bids"
                 android:layout_width="match_parent"
                 android:layout_height="4dp"
                 android:visibility="invisible"
                 android:background="@color/my_red"
                 android:layout_alignParentBottom="true"
                 />
            </RelativeLayout>
            <!-- 中标 -->
             <RelativeLayout
              android:id="@+id/tab_win_bid"
              android:layout_width="match_parent"
              android:layout_height="45dp"
              android:layout_weight="1">
             <TextView
                 android:id="@+id/tv_win_bid"
                 android:layout_width="wrap_content"
				 android:layout_height="wrap_content" 
				 android:text="@string/tab_win_bid" 
				 android:textSize="@dimen/text_size" 
				 android:layout_centerInParent="true"
				 android:textColor="@color/my_gray" 
                 />
             <TextView
                 android:id="@+id/line_win_bid"
                 android:visibility="invisible"
                 android:layout_width="match_parent"
                 android:layout_height="4dp"
                 android:background="@color/my_red"
                 android:layout_alignParentBottom="true"
                 />
            </RelativeLayout>
         </LinearLayout>
        </FrameLayout>
    </RelativeLayout>
