<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="MergeRootFrame" >
	<com.sougongcheng.ui.widget.ClearableAutoCompleteTextView
	    android:layout_centerHorizontal="true"
	    style="@style/GlobleSingleLineEditText"
	    android:maxLength="11"
        android:id="@+id/et_nick_name"
        android:layout_marginTop="@dimen/line_height"
        android:layout_marginLeft="@dimen/margin_lg_right"
        android:layout_marginRight="@dimen/margin_lg_right"
        android:background="@drawable/bg_edittext"
        android:drawableLeft="@drawable/ic_person"
        android:drawableStart="@drawable/ic_person"
        android:textSize="@dimen/login_word_size"
        android:hint="@string/regin_hint_nick_name"
        android:imeOptions="actionNext"
        android:nextFocusDown="@+id/et_password"
        />
	<com.sougongcheng.ui.widget.ClearableAutoCompleteTextView
	    android:layout_below="@+id/et_nick_name"
	    android:layout_marginTop="@dimen/margin_top"
	    android:layout_marginLeft="@dimen/margin_lg_right"
        android:layout_marginRight="@dimen/margin_lg_right"
        android:maxLength="20"
        android:inputType="textPassword"
        android:background="@drawable/bg_edittext"
	    android:layout_centerHorizontal="true"
	    style="@style/GlobleSingleLineEditText"
        android:id="@+id/et_password"
        android:textSize="@dimen/login_word_size"
        android:drawableLeft="@drawable/ic_secure"
        android:drawableStart="@drawable/ic_secure"
        android:hint="@string/login_hint_password"
        android:imeOptions="actionNext"
        />
	    <RadioGroup
	          android:layout_width="match_parent"
	   		  android:layout_height="wrap_content"
	    	  android:layout_marginTop="@dimen/margin_top"
	          android:layout_marginLeft="@dimen/margin_lg_right"
              android:layout_marginRight="@dimen/margin_lg_right"
              android:orientation="horizontal"
              android:layout_below="@+id/et_password"
              android:gravity="center_horizontal"
	          android:id="@+id/line_sex"
	        >
	        <RadioButton
	            android:id="@+id/sex_male"
	            android:text="男"
	            />
	         <RadioButton
	             android:id="@+id/sex_female"
	            android:layout_marginLeft="@dimen/line_height"
	            android:text="女"
	            />
	    </RadioGroup>
	<Button
	    android:layout_below="@+id/line_sex"
	    android:layout_marginTop="@dimen/margin_lg_right"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:id="@+id/btn_done"
	    android:text="@string/btn_done"
	    android:layout_marginLeft="@dimen/margin_lg_right"
        android:layout_marginRight="@dimen/margin_lg_right"
        android:textColor="@color/my_white"
        android:background="@drawable/submit_selector"
	    />
    </RelativeLayout>
