<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="MergeRootFrame" >
        <RelativeLayout
        android:id="@+id/top_menu"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:background="@color/my_red" >
        <TextView
            android:id="@+id/tv_back"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="返回"
            android:textSize="@dimen/text_lg_size"
            android:textColor="@color/my_white"
            />
    </RelativeLayout>
	<com.sougongcheng.ui.widget.ClearableAutoCompleteTextView
	    android:layout_below="@+id/top_menu"
	    android:layout_centerHorizontal="true"
	    style="@style/GlobleSingleLineEditText"
	    android:inputType="number"
	    android:maxLength="11"
        android:id="@+id/et_account"
        android:layout_marginTop="@dimen/margin_left"
        android:layout_marginLeft="@dimen/margin_lg_right"
        android:layout_marginRight="@dimen/margin_lg_right"
        android:background="@drawable/bg_edittext"
        android:textSize="@dimen/login_word_size"
        android:hint="@string/regin_hint_mobilenum"
        android:imeOptions="actionNext"
        android:nextFocusDown="@+id/et_password"
        />
		<LinearLayout
		    android:layout_below="@+id/et_account"
		    android:id="@+id/certify_line"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="@dimen/margin_top"
		    android:layout_marginLeft="@dimen/margin_lg_right"
            android:layout_marginRight="@dimen/margin_lg_right"
            android:orientation="horizontal"
		    >
		 <com.sougongcheng.ui.widget.ClearableAutoCompleteTextView
		    android:layout_weight="1"
	    	android:layout_centerHorizontal="true"
	    	style="@style/GlobleSingleLineEditText"
        	android:id="@+id/et_centify_code"
        	android:background="@drawable/bg_edittext"
        	android:textSize="@dimen/login_word_size"
        	android:hint="@string/regin_hint_certify_code"
       	 	android:imeOptions="actionNext"
        	android:nextFocusDown="@+id/et_password"
       		 />
		 	<TextView
		 	    android:gravity="center"
		 	    android:id="@+id/tv_getcode"
		 	    android:textColor="@color/my_blue"
		 	    android:layout_width="match_parent"
		 	    android:layout_height="wrap_content"
		 	    android:textSize="@dimen/text_lg_size"
		 	    android:layout_weight="2"
		 	    android:text="获取验证码"
		 	    />
		    </LinearLayout>
	<Button
	    android:layout_below="@+id/certify_line"
	    android:layout_marginTop="@dimen/margin_lg_right"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:id="@+id/btn_next_step"
	    android:text="@string/text_next_step"
	    android:layout_marginLeft="@dimen/margin_lg_right"
        android:layout_marginRight="@dimen/margin_lg_right"
        android:textColor="@color/my_white"
        android:background="@drawable/submit_selector"
	    />
    </RelativeLayout>
