<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="MergeRootFrame" >
    <RelativeLayout
        android:id="@+id/top_menu"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:background="@color/my_red" >
        <TextView
            android:id="@+id/city"
            android:layout_width="60dp"
            android:layout_marginLeft="20dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="四川"
            android:textSize="@dimen/text_size"
            android:textColor="@color/my_white"
            />
        <ImageButton
            android:id="@+id/search_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/city"
            android:layout_centerVertical="true"
            android:layout_marginLeft="3dp"
            android:background="@drawable/btn_search" />

        <EditText
            android:id="@+id/search_title"
            android:editable="false"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@null"
            android:layout_toRightOf="@+id/search_btn"
            android:layout_alignBaseline="@+id/city"
            android:hint="请输入关键词，例如：建筑..."
            android:textColor="@color/my_white"
            android:textColorHint = "@color/my_white"       
            android:textSize="16sp" />
    </RelativeLayout>
    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_below="@+id/top_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
    </android.support.v4.view.ViewPager>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        >
          <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             >
             <RelativeLayout
              android:id="@+id/rl_search_project"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_weight="1">
             <ImageView
              android:id="@+id/iv_search_project"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_centerHorizontal="true"
              android:src="@drawable/search_project"
              />
             <TextView
                 android:layout_width="wrap_content"
				 android:layout_height="wrap_content" 
				 android:text="@string/search_project"  
				 android:textColor="@color/my_white" 
				 android:layout_centerHorizontal="true"
				 android:layout_below="@+id/iv_search_project"             
                 />
            </RelativeLayout>
          	 <RelativeLayout
          	  android:id="@+id/rl_my_project"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_weight="1">
            <ImageView
                 android:id="@+id/iv_my_project"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:src="@drawable/my_project"
                 />
             <TextView
                 android:layout_width="wrap_content"
				 android:layout_height="wrap_content" 
				 android:text="@string/my_project"  
				 android:textColor="@color/my_white" 
				 android:layout_centerHorizontal="true"
				 android:layout_below="@+id/iv_my_project"             
                 />
            </RelativeLayout>
            <RelativeLayout
          	  android:id="@+id/rl_my_circle"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_weight="1">
            <ImageView
                 android:id="@+id/iv_my_circle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:src="@drawable/my_circle"
                 />
             <TextView
                 android:layout_width="wrap_content"
				 android:layout_height="wrap_content" 
				 android:text="@string/my_circle"  
				 android:textColor="@color/my_white" 
				 android:layout_centerHorizontal="true"
				 android:layout_below="@+id/iv_my_circle"             
                 />
            </RelativeLayout>
              <RelativeLayout
          	  android:id="@+id/rl_my_account"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_weight="1">
            <ImageView
                 android:id="@+id/iv_my_account"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:src="@drawable/my_account"
                 />
            <TextView
                 android:layout_width="wrap_content"
				 android:layout_height="wrap_content" 
				 android:text="@string/my_account"  
				 android:textColor="@color/my_white" 
				 android:layout_centerHorizontal="true"
				 android:layout_below="@+id/iv_my_account"             
                 />
            </RelativeLayout>
         </LinearLayout>
        </FrameLayout>

    </RelativeLayout>
