<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/acoount_background"
    android:orientation="vertical"
    tools:context=".MainActivity"
    tools:ignore="MergeRootFrame" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/my_white"
        android:orientation="vertical"
        >
        <!-- 昵称  -->
 	<RelativeLayout
 	    android:id="@+id/rl_name"
 	    android:layout_width="match_parent"
 	    android:layout_height="@dimen/line_height"
 	    >
 	    <ImageView
 	        android:id="@+id/iv_header"
 	        android:layout_width="@dimen/header_size"
 	        android:layout_height="@dimen/header_size"
 	        android:layout_centerVertical="true"
 	        android:layout_alignParentLeft="true"
   			android:layout_marginLeft="@dimen/margin_left" 	        
   			android:background="@drawable/male"
 	        />
 	    <TextView
 	        android:layout_toRightOf="@+id/iv_header"
 	        android:layout_marginLeft="@dimen/margin_left"
 	        android:textColor="@color/background_material_dark"
 	        android:layout_centerVertical="true"
 	        android:id="@+id/tv_name"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content" 
 	        android:textSize="@dimen/text_size"
 	        android:text="zs"
 	         />
 	</RelativeLayout>
 	<TextView
 	    android:layout_width="match_parent"
 	    android:layout_height="1dp"
 	    android:background="@color/line_gray"
 	    android:layout_marginLeft="@dimen/margin_right"
 	    />
 	
 	<!-- 性别 -->
 	<RelativeLayout
 	    android:id="@+id/rl_sex"
 	    android:layout_width="match_parent"
 	    android:layout_height="@dimen/line_height"
 	    >
 	    <TextView
 	        android:layout_marginLeft="@dimen/margin_left"
 	        android:textColor="@color/background_material_dark"
 	        android:layout_centerVertical="true"
 	        android:id="@+id/tv_sex_label"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content" 
 	        android:textSize="@dimen/text_size"
 	        android:text="性别"
 	         />
 	      <TextView
 	        android:layout_marginRight="20dp"
 	        android:textColor="@color/background_material_dark"
 	        android:layout_alignParentRight="true"
 	        android:layout_centerVertical="true"
 	        android:id="@+id/tv_sex"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content" 
 	        android:textSize="@dimen/text_size"
 	        android:text="男"
 	         />
 	</RelativeLayout>
 	<TextView
 	    android:layout_width="match_parent"
 	    android:layout_height="1dp"
 	    android:background="@color/line_gray"
 	    android:layout_marginLeft="@dimen/margin_right"
 	    />
 		<!-- 我的收藏 -->
 	<RelativeLayout
 	    android:id="@+id/rl_account"
 	    android:layout_width="match_parent"
 	    android:layout_height="@dimen/line_height"
 	    >
 	    <TextView
 	        android:layout_marginLeft="@dimen/margin_left"
 	        android:textColor="@color/background_material_dark"
 	        android:layout_centerVertical="true"
 	        android:id="@+id/tv_tel"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content" 
 	        android:textSize="@dimen/text_size"
 	        android:text="手机号"
 	         />
 	      <TextView
 	        android:layout_marginRight="20dp"
 	        android:textColor="@color/background_material_dark"
 	        android:layout_alignParentRight="true"
 	        android:layout_centerVertical="true"
 	        android:id="@+id/tv_tel_content"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content" 
 	        android:textSize="@dimen/text_size"
 	        android:text="15208266461"
 	         />
 	</RelativeLayout>
 	<TextView
 	    android:layout_width="match_parent"
 	    android:layout_height="1dp"
 	    android:background="@color/line_gray"
 	    android:layout_marginLeft="@dimen/margin_right"
 	    />
 	<!-- 修改密码-->
 	<RelativeLayout
 	    android:id="@+id/rl_modify_ps"
 	    android:layout_width="match_parent"
 	    android:layout_height="@dimen/line_height"
 	    >
 	    <TextView
 	        android:layout_marginLeft="@dimen/margin_left"
 	        android:textColor="@color/background_material_dark"
 	        android:layout_centerVertical="true"
 	        android:id="@+id/tv_modify_ps"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content" 
 	        android:textSize="@dimen/text_size"
 	        android:text="修改密码"
 	         />
 	    <TextView
 	        android:layout_alignParentRight="true"
 	        android:layout_marginRight="@dimen/margin_right"
 	        android:layout_centerVertical="true"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:textColor="@color/right_arrow_gray"
 	        android:textSize="@dimen/right_array_size"
 	        android:text="@string/right_array"
 	        />
 	</RelativeLayout>
 	<TextView
 	    android:layout_width="match_parent"
 	    android:layout_height="1dp"
 	    android:background="@color/line_gray"
 	    android:layout_marginLeft="@dimen/margin_right"
 	    />
 	 	<!-- 修改个人信息-->
 	<RelativeLayout
 	    android:id="@+id/rl_modify_message"
 	    android:layout_width="match_parent"
 	    android:layout_height="@dimen/line_height"
 	    android:visibility="invisible"
 	    >
 	    <TextView
 	        android:layout_marginLeft="@dimen/margin_left"
 	        android:textColor="@color/background_material_dark"
 	        android:layout_centerVertical="true"
 	        android:id="@+id/tv_modify_message"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content" 
 	        android:textSize="@dimen/text_size"
 	        android:text="修改个人信息"
 	         />
 	    <TextView
 	        android:layout_alignParentRight="true"
 	        android:layout_marginRight="@dimen/margin_right"
 	        android:layout_centerVertical="true"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:textColor="@color/right_arrow_gray"
 	        android:textSize="@dimen/right_array_size"
 	        android:text="@string/right_array"
 	        />
 	</RelativeLayout>
 	</LinearLayout>
 	
    <!-- 设置标签 -->
    <TextView
        android:layout_marginTop="@dimen/margin_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting"
        android:layout_marginLeft="@dimen/margin_sm_left"
        />
    
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/my_white"
        android:orientation="vertical"
        >
        <!-- 删除缓存  -->
 	<RelativeLayout
 	    android:id="@+id/rl_del"
 	    android:layout_width="match_parent"
 	    android:layout_height="@dimen/line_height"
 	    >
 	    
 	    <TextView
 	        android:layout_marginLeft="@dimen/margin_left"
 	        android:textColor="@color/background_material_dark"
 	        android:layout_centerVertical="true"
 	        android:id="@+id/del_storage"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content" 
 	        android:textSize="@dimen/text_size"
 	        android:text="@string/del_storage"
 	         />
 	</RelativeLayout>
 	<TextView
 	    android:layout_width="match_parent"
 	    android:layout_height="1dp"
 	    android:background="@color/line_gray"
 	    android:layout_marginLeft="@dimen/margin_right"
 	    />
 	    <!-- 关于我们  -->
 	<RelativeLayout
 	    android:id="@+id/rl_about"
 	    android:layout_width="match_parent"
 	    android:layout_height="@dimen/line_height"
 	    >
 	    
 	    <TextView
 	        android:layout_marginLeft="@dimen/margin_left"
 	        android:textColor="@color/background_material_dark"
 	        android:layout_centerVertical="true"
 	        android:id="@+id/tv_about"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content" 
 	        android:textSize="@dimen/text_size"
 	        android:text="@string/about_us"
 	         />
 	    <TextView
 	        android:layout_alignParentRight="true"
 	        android:layout_marginRight="@dimen/margin_right"
 	        android:layout_centerVertical="true"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:textColor="@color/right_arrow_gray"
 	        android:textSize="@dimen/right_array_size"
 	        android:text="@string/right_array"
 	        />
 	</RelativeLayout>
 	<TextView
 	    android:layout_width="match_parent"
 	    android:layout_height="1dp"
 	    android:background="@color/line_gray"
 	    android:layout_marginLeft="@dimen/margin_right"
 	    />
 		<RelativeLayout
 	    android:id="@+id/rl_exit"
 	    android:layout_width="match_parent"
 	    android:layout_height="@dimen/line_height"
 	    >
 	    <TextView
 	        android:layout_marginLeft="@dimen/margin_left"
 	        android:textColor="@color/background_material_dark"
 	        android:layout_centerVertical="true"
 	        android:id="@+id/tv_exit"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content" 
 	        android:textSize="@dimen/text_size"
 	        android:text="@string/exit"
 	         />
 	    <TextView
 	        android:layout_alignParentRight="true"
 	        android:layout_marginRight="@dimen/margin_right"
 	        android:layout_centerVertical="true"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:textColor="@color/right_arrow_gray"
 	        android:textSize="@dimen/right_array_size"
 	        android:text="@string/right_array"
 	        />
 	</RelativeLayout>
 	</LinearLayout>

    </LinearLayout>
